--- a/cheat_sheet.html
+++ b/cheat_sheet.html
@@ -48,6 +48,7 @@
                         <li>green</li>
                         <li>yellow</li>
                         <li>purple</li>
+                        <li>black</li>
                     </ul>     
                      
                 </section>
